# luxoft-race

./: .gitignore  CCollisionGarbage.cpp  CCollisionGarbage.h  CCollisionItem.cpp  CCollisionItem.h  CGame.cpp  CGame.h  CMakeLists.txt  CPlayer.cpp  CPlayer.h  CRoad.cpp  CRoad.h  Game.cpp  Game.h  ICollision.h  Keycodes.h  Player.cpp  Player.h  README.md  Road.cpp  Road.h  SSize.cpp  SSize.h  Size.cpp  Size.h  game.cpp  main.cpp  utils.cpp  utils.h
